tests/snapshots/test_runner__tests__compiler__typecheck__contextual_unification_5.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
do {
  let f
    : (o: { x: { y: Integer } }) => Integer
    = { x: { z } } => 2
}

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/contextual_unification_5.kk:4:14
  │
4 │     = { x: { z } } => 2
  │              ^ No such property
  │
  = Available properties:
      y
